[gd_scene load_steps=5 format=3 uid="uid://dosfprffmtayf"]

[ext_resource type="Script" path="res://src/ui/CardInHand.gd" id="1_ixf6w"]
[ext_resource type="PackedScene" uid="uid://bdfnnjgo2jc4p" path="res://scn/game/CardBorderComponent.tscn" id="2_x7hwj"]
[ext_resource type="Script" path="res://lib/identifiers/ICardInstance.gd" id="3_udjbd"]
[ext_resource type="Script" path="res://lib/identifiers/ITargetable.gd" id="4_jgg30"]

[node name="CardInHand" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ixf6w")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardBorderComponent" parent="TextureRect" instance=ExtResource("2_x7hwj")]
layout_mode = 1

[node name="ICardInstance" type="Node" parent="."]
script = ExtResource("3_udjbd")

[node name="ITargetable" type="Node" parent="."]
script = ExtResource("4_jgg30")
